# SRI_testing

./: CHANGELOG.md  Dockerfile_RENCI_PRODUCTION  Dockerfile_SIMPLE  README.md  docker-compose.yaml  dot_env_template  pyproject.toml  pytest.ini-ignore  requirements.txt
api/: README.md  main.py
dashboard/: Dockerfile  README.md  dot_env_template  package-lock.json  package.json
dashboard/src/: App.vue  main.js
dashboard/src/components/TranslatorFilter/: TranslatorFilter.vue
docs/: kg_unit_test_definitions.md  web_dashboard_operations.md
sri_testing/: __init__.py
sri_testing/translator/registry/: SmartAPI.ipynb  __init__.py
sri_testing/translator/sri/testing/: create_templates.py  onehops_test_runner.py  processor.py  report_db.py  report_missing_predicates.py  status_dashboard_data.py  update_templates.py
sri_testing/translator/trapi/: __init__.py
tests/onehop/: .gitignore  README.md  conftest.py  test_onehops.py  util.py
tests/onehop/test_triples/ARA/ARAX/: ARAX_Lite.json
tests/onehop/test_triples/KP/Unit_Test_KP/: Test_KP_1.json
tests/translator/registry/: __init__.py  test_translator_registry.py
tests/translator/sri/testing/: __init__.py  test_file_report_db.py  test_mongo_report_db.py  test_processor.py  test_pytest_report_logic.py  test_test_report_db.py  test_util.py
tests/translator/sri/testing/util/: test_reporting_methods.py
tests/translator/trapi/: __init__.py  test_trapi.py  test_trapi_1.4.0-beta5.yaml
translator/registry/: __init__.py
translator/sri/testing/: onehops_test_runner.py  processor.py  report_db.py
translator/trapi/: __init__.py
