[tool.poetry]
name = "SRI_Testing"
version = "2.0.0"
description = "Semantics-driven tests for testing Translator TRAPI Components (KPs and ARAs)"
authors = [
    "Richard Bruskiewich <richard.bruskiewich@delphinai.com>",
    "Chris Bizon <bizon.renci.org>",
    "Tim Putnam <tim@tislab>"
]
maintainers = ["Richard Bruskiewich <richard.bruskiewich@delphinai.com>"]
license = "MIT"
readme = "README.md"

homepage = "https://github.com/TranslatorSRI"
repository = "https://github.com/TranslatorSRI/SRI_testing"
documentation = "https://github.com/TranslatorSRI/SRI_testing/blob/main/README.md"
keywords = [
    "NCATS",
    "Biomedical Data Translator",
    "Translator",
    "ReasonerAPI",
    "TRAPI",
    "validation",
    "Biolink Model"
]
classifiers = [
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.9"
]

packages = [
    {include = "sri_testing"}
]

include = [
    { path = "tests" }
]

[tool.poetry.dependencies]
python = "^3.9"
python-dateutil = "^2.8.2"
pytest-asyncio = "^0.19.0"
pytest-harvest = "^1.10.4"
httpx = "^0.23.0"
orjson = "^3.8.0"
aiofiles = "^22.1.0"
pymongo = "^4.2.0"

# reasoner-validator should pull in many dependencies
# also used by SRI Testing, including BMT (which adds some more)
reasoner-validator = "^3.3.3"

# 10 February 2023 dependency conflict:
# The latest Biolink Model Toolkit release uses oaklib >=0.1.71
# which depends on networkx (>=2.7.1,<3.0.0) but
# biothings-explorer (1.1.0) depends on networkx (2.4)
# biothings-explorer = "^1.1.0"

# [tool.poetry.group.dev.dependencies]

[tool.poetry.urls]
"Change Log" = "https://github.com/TranslatorSRI/SRI_testing/blob/master/CHANGELOG.md"
"Bug Tracker" = "https://github.com/TranslatorSRI/SRI_testing/issues"

[tool.poetry.extras]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
