[tool.poetry]
name = "SRI_Testing"
version = "2.1.10"
description = "Semantics-driven tests for testing Translator TRAPI Components (KPs and ARAs)"
authors = [
    "Richard Bruskiewich <richard.bruskiewich@delphinai.com>",
    "Chris Bizon <bizon.renci.org>",
    "Tim Putnam <tim@tislab>"
]
maintainers = ["Richard Bruskiewich <richard.bruskiewich@delphinai.com>"]
license = "MIT"
readme = "README.md"

homepage = "https://github.com/TranslatorSRI"
repository = "https://github.com/TranslatorSRI/SRI_testing"
documentation = "https://github.com/TranslatorSRI/SRI_testing/blob/main/README.md"
keywords = [
    "NCATS",
    "Biomedical Data Translator",
    "Translator",
    "ReasonerAPI",
    "TRAPI",
    "validation",
    "Biolink Model"
]
classifiers = [
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.10"
]

packages = [
    {include = "sri_testing"}
]

include = [
    { path = "tests" }
]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.2.2"
python-dateutil = "^2.8.2"
pytest-asyncio = "^0.19.0"
pytest-harvest = "^1.10.4"
httpx = "^0.23.0"
orjson = "3.8.10"
aiofiles = "^22.1.0"
pymongo = "^4.2.0"
fastapi = ">=0.68.0,<0.69.0"
pydantic = ">=1.8.0,<2.0.0"
uvicorn = ">=0.15.0,<0.16.0"

# reasoner-validator should pull in many dependencies
# also used by SRI Testing, including BMT (which adds some more)
reasoner-validator = "^3.5.8"

# [tool.poetry.group.dev.dependencies]

[tool.poetry.urls]
"Change Log" = "https://github.com/TranslatorSRI/SRI_testing/blob/master/CHANGELOG.md"
"Bug Tracker" = "https://github.com/TranslatorSRI/SRI_testing/issues"

[tool.poetry.extras]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(message)s"

log_file = "pytest.log"
log_file_level = "INFO"
log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"